# Mesum

./: .clang-format  .gitignore  CMakeLists.txt  CMakeSetup.cmake  Guidelines.cpp  Guidelines.hpp  Module_dependencies.drawio  Readme.md  index.md
Apps/: CMakeLists.txt
Apps/2DRendererTest/: CMakeLists.txt  imgui.ini  main.cpp
Apps/ArchitectureGraphicsTest/: CMakeLists.txt  WindowedApps.cpp
Apps/ArchitectureTest/: BaseApps.cpp  CMakeLists.txt  main.cpp
Apps/CubeMoverApp/: CubeMoverApp.cpp
Apps/FluidSimulation/: CMakeLists.txt  CPUSimulation.cpp  RenderTaskFluidSimulation.cpp  RenderTaskFluidSimulation.hpp  imgui.ini  main.cpp
Apps/FluidSimulation/data/: cloudSimulation.hlsl  commonInclude.hlsl  dataAdvection.hlsl  displayData.hlsl  displayData1f.hlsl  displayData4f.hlsl  displayFluid.hlsl  divergence.hlsl  fluidSimulation.hlsl  jacobi.hlsl  mgProlongate.hlsl  mgRestrict.hlsl  project.hlsl  residual.hlsl  vectorField.hlsl  velocityAdvection.hlsl
Apps/GameWindow/: Animation.cpp  Animation.hpp  BasicCpnt.cpp  BasicCpnt.hpp  CMakeLists.txt  Collision.cpp  Collision.hpp  Displacer.cpp  Displacer.hpp  GameAction.cpp  GameAction.hpp  GameActionDef.cpp  GameActionDef.hpp  Scene.cpp  Scene.hpp  Serializable.cpp  Serializable.hpp  imgui.ini  main.cpp
Apps/GameWindow/data/: compile.bat  squareShader.fs.glsl  squareShader.fs.spv  squareShader.vs.spv
Apps/GameWindow/data/animations/: Fadeoff.anim  Test.anim
Apps/GameWindow/data/levels/: StartLevel.lvl  empty.lvl  test.lvl  test2.lvl
Apps/GameWindow/data/models/: First.model
Apps/GameWindow/data/textures/: Test.png~
Apps/MathTest/: CMakeLists.txt  main.cpp
Apps/StardewFactory/: Agents.hpp  CMakeLists.txt  Common.hpp  Rendering.cpp  Rendering.hpp  SFMain.cpp  Traits.hpp
Apps/WorldExplorer/: CMakeLists.txt  Camera.cpp  Camera.hpp  CameraOrbitController.cpp  CameraOrbitController.hpp  HgtPosition.cpp  HgtPosition.hpp  SrtmHm.cpp  SrtmHm.hpp  WeMain.cpp  WeMain.h  WeMain.hpp
Apps/WorldExplorer/data/: cubeShader.hlsl
Engine/: CMakeLists.txt  docEngine  generateDoc.bat
Engine/MesumCore/: CMakeLists.txt  includes.hpp
Engine/MesumCore/Common/: CoreCommon.hpp
Engine/MesumCore/Kernel/: Application.cpp  Application.hpp  Asserts.cpp  Asserts.hpp  CMakeLists.txt  Callbacks.hpp  FbxImporter.cpp  FbxImporter.hpp  File.cpp  File.hpp  Image.cpp  Image.hpp  Input.cpp  Input.hpp  InputCommon.hpp  Kernel.cpp  Kernel.hpp  Kernel_pch.hpp  Keys.hpp  Log.cpp  Log.hpp  LogPolicies.cpp  LogPolicies.hpp  Logger.hpp  Mains.cpp  Mains.hpp  Mat.hpp  MatGlm.hpp  MatHelpers.cpp  MatHelpers.hpp  Math.cpp  Math.hpp  MathTypes.hpp  Memory.cpp  Memory.hpp  Profile.cpp  Profile.hpp  Quaternion.cpp  Quaternion.hpp  Serializable.cpp  (+8 more)
Engine/MesumCore/MesumCore/: Common.hpp
Engine/MesumGraphics/: ApiAbstraction.hpp  CMakeLists.txt  CrossPlatform.hpp  CrossRenderer.hpp  RenderBase.hpp  RenderTask.hpp  Renderer.hpp  RendererUtils.cpp  RendererUtils.hpp  WindowedApp.cpp  WindowedApp.hpp  Windows.hpp
Engine/MesumGraphics/DX12Renderer/: CMakeLists.txt  DX12ApiAbstraction.cpp  DX12CommandQueue.cpp  DX12CommandQueue.hpp  DX12Context.cpp  DX12Context.hpp  DX12Renderer.cpp  DX12Renderer.hpp  DX12RendererCommon.cpp  DX12RendererCommon.hpp  DX12Surface.cpp  DX12Surface.hpp  DX12Window.cpp  DX12Window.hpp  Includes.hpp  RendererDX12Impl.cpp  RendererDX12Impl.hpp  SwapchainDX12Impl.cpp  imgui_impl_dx12.cpp  imgui_impl_dx12.h
Engine/MesumGraphics/DearImgui/: CMakeLists.txt  MesumDearImGui.cpp  MesumDearImGui.hpp
Engine/MesumGraphics/MesumGraphics/: Common.hpp
Engine/MesumGraphics/RenderTasks/: BasicVertex.cpp  BasicVertex.hpp  CMakeLists.txt  Mesh.hpp  RenderTask2DRender.cpp  RenderTask2DRender.hpp  RenderTask3dRender.cpp  RenderTask3dRender.h  RenderTask3dRender.hpp  RenderTaskDearImGui.cpp  RenderTaskDearImGui.hpp  RenderTasksBasicSwapchain.cpp  RenderTasksBasicSwapchain.hpp
Engine/MesumGraphics/Unix/: CMakeLists.txt  Includes.hpp  WindowedAppImplXCB.cpp  WindowedAppImplXCB.hpp  WindowsImplXCB.cpp  WindowsImplXCB.hpp  XCBContext.cpp  XCBContext.hpp
Engine/MesumGraphics/VulkanRenderer/: CMakeLists.txt  Includes.hpp  RendererVulkanImpl.cpp  RendererVulkanImpl.hpp  SwapchainVulkanImpl.cpp  VulkanApiAbstraction.cpp  VulkanContext.cpp  VulkanContext.hpp  VulkanRendererCommon.cpp  VulkanRendererCommon.hpp  imgui_impl_vulkan.cpp  imgui_impl_vulkan.h
Engine/MesumGraphics/Win32/: CMakeLists.txt  Includes.hpp  Win32Context.cpp  Win32Context.hpp  WindowedAppImpl.cpp  WindowedAppImpl.hpp  WindowsImpl.cpp  WindowsImpl.hpp
Src/: CMakeLists.txt  Makefile  main.cpp  unixMain.cpp  windowsMain.cpp
Src/Application/: Application.cpp  Application.hpp  CMakeLists.txt  Main.cpp  Main.hpp
Src/Apps/: CMakeLists.txt
Src/Apps/CubeMoverApp/: CMakeLists.txt  CubeMoverApp.cpp
Src/CrossPlatform/: CMakeLists.txt  CrossPlatform.cpp  CrossPlatform.hpp
Src/DX12Renderer/: CMakeLists.txt  DX12Renderer.cpp  DX12Renderer.hpp  d3dx12.h
Src/Input/: CMakeLists.txt  Input.cpp  Input.hpp  InputCommon.hpp  Keys.hpp
Src/Kernel/: Application.hpp  Asserts.hpp  CMakeLists.txt  Callbacks.hpp  Kernel.cpp  Kernel.hpp  Types.hpp
Src/Logger/: CMakeLists.txt  Log.hpp  LogConfig.hpp  LogPolicies.cpp  LogPolicies.hpp  Logger.hpp
Src/Math/: CMakeLists.txt  MathTypes.hpp  Vec.hpp  Vec.inl
Src/PlatUnix/: CMakeLists.txt  UnixApp.cpp  UnixApp.hpp
Src/PlatWindows/: CMakeLists.txt  WindowsApp.cpp  WindowsApp.hpp
Src/Simd/: CMakeLists.txt
doc/html/: _application_8hpp_source.html  _asserts_8hpp_source.html  _callbacks_8hpp_source.html  _cross_renderer_8hpp_source.html  _d_x12_context_8hpp_source.html  _d_x12_renderer_common_8hpp_source.html  _d_x12_texture_8hpp_source.html  _file_8hpp_source.html  _kernel__pch_8hpp_source.html  _keys_8hpp_source.html  _log_8hpp_source.html  _logger_8hpp_source.html  _math_8hpp_source.html  _math_types_8hpp_source.html  _mesum_core_2_mesum_core_2_common_8hpp_source.html  _mesum_dear_im_gui_8hpp_source.html  (+225 more)
docs/: Guidelines.cpp  Guidelines.hpp  engine_roadmap.md  external_references.md  index.html.lnk  index.md  we_roadmap.md
(+1454 files in other folders)
